<resources>
    <string name="splash">Splash</string>
    <string name="map">Mapa</string>
    <string name="library">Biblioteca</string>
    <string name="combat">Combate</string>
    <string name="profile">Perfil</string>
    <string name="settings">Configuración</string>
    <string name="title_activity_maps">Map</string>


    <string name="transition_item_dinosaur_icon">transition_item_dinosaur_icon_%1s</string>
    <string name="transition_item_dinosaur_text">transition_item_dinosaur_text_%1s</string>

</resources>
